build/parser.output
Grammar

    0 $accept: programa $end

    1 programa: declaracao_lista

    2 declaracao_lista: declaracao_lista declaracao
    3                 | declaracao

    4 declaracao: var_declaracao
    5           | fun_declaracao

    6 var_declaracao: tipo_especificador ID SEMICOL
    7               | tipo_especificador ID LBRACKET NUM RBRACKET SEMICOL

    8 tipo_especificador: INT
    9                   | VOID

   10 fun_declaracao: tipo_especificador ID LPAREN params RPAREN composto_decl

   11 params: param_lista
   12       | VOID

   13 param_lista: param_lista COMMA param
   14            | param

   15 param: tipo_especificador ID
   16      | tipo_especificador ID LBRACKET RBRACKET

   17 composto_decl: LBRACE local_declaracoes statement_lista RBRACE

   18 local_declaracoes: local_declaracoes var_declaracao
   19                  | ε

   20 statement_lista: statement_lista statement
   21                | ε
   22                | error SEMICOL

   23 statement: expressao_decl
   24          | composto_decl
   25          | selecao_decl
   26          | iteracao_decl
   27          | retorno_decl

   28 expressao_decl: expressao SEMICOL
   29               | SEMICOL

   30 selecao_decl: IF LPAREN expressao RPAREN statement
   31             | IF LPAREN expressao RPAREN statement ELSE statement

   32 iteracao_decl: WHILE LPAREN expressao RPAREN statement

   33 retorno_decl: RETURN SEMICOL
   34             | RETURN expressao SEMICOL

   35 expressao: var ASSIGN expressao
   36          | simples_expressao

   37 var: ID
   38    | ID LBRACKET expressao RBRACKET

   39 simples_expressao: soma_expressao relacional soma_expressao
   40                  | soma_expressao

   41 relacional: SMAL
   42           | SMALEQ
   43           | GREAT
   44           | GREATEQ
   45           | EQ
   46           | DIFF

   47 soma_expressao: soma_expressao soma termo
   48               | termo

   49 soma: PLUS
   50     | MINUS

   51 termo: termo mult fator
   52      | fator

   53 mult: MULT
   54     | DIV

   55 fator: LPAREN expressao RPAREN
   56      | var
   57      | ativacao
   58      | NUM
   59      | MINUS fator

   60 ativacao: ID LPAREN args RPAREN

   61 args: arg_lista
   62     | ε

   63 arg_lista: arg_lista COMMA expressao
   64          | expressao


Terminals, with rules where they appear

    $end (0) 0
    error (256) 22
    ID <node> (258) 6 7 10 15 16 37 38 60
    NUM <node> (259) 7 58
    IF <node> (260) 30 31
    ELSE <node> (261) 31
    WHILE <node> (262) 32
    RETURN <node> (263) 33 34
    PLUS <node> (264) 49
    MINUS <node> (265) 50 59
    MULT <node> (266) 53
    DIV <node> (267) 54
    SMAL <node> (268) 41
    SMALEQ <node> (269) 42
    GREAT <node> (270) 43
    GREATEQ <node> (271) 44
    EQ <node> (272) 45
    DIFF <node> (273) 46
    ASSIGN <node> (274) 35
    INT (275) 8
    VOID (276) 9 12
    SEMICOL (277) 6 7 22 28 29 33 34
    COMMA (278) 13 63
    LPAREN (279) 10 30 31 32 55 60
    RPAREN (280) 10 30 31 32 55 60
    LBRACKET (281) 7 16 38
    RBRACKET (282) 7 16 38
    LBRACE (283) 17
    RBRACE (284) 17
    LOWER_THAN_ELSE (285)
    UMINUS (286)


Nonterminals, with rules where they appear

    $accept (32)
        on left: 0
    programa <node> (33)
        on left: 1
        on right: 0
    declaracao_lista <node> (34)
        on left: 2 3
        on right: 1 2
    declaracao <node> (35)
        on left: 4 5
        on right: 2 3
    var_declaracao <node> (36)
        on left: 6 7
        on right: 4 18
    tipo_especificador <type> (37)
        on left: 8 9
        on right: 6 7 10 15 16
    fun_declaracao <node> (38)
        on left: 10
        on right: 5
    params <node> (39)
        on left: 11 12
        on right: 10
    param_lista <node> (40)
        on left: 13 14
        on right: 11 13
    param <node> (41)
        on left: 15 16
        on right: 13 14
    composto_decl <node> (42)
        on left: 17
        on right: 10 24
    local_declaracoes <node> (43)
        on left: 18 19
        on right: 17 18
    statement_lista <node> (44)
        on left: 20 21 22
        on right: 17 20
    statement <node> (45)
        on left: 23 24 25 26 27
        on right: 20 30 31 32
    expressao_decl <node> (46)
        on left: 28 29
        on right: 23
    selecao_decl <node> (47)
        on left: 30 31
        on right: 25
    iteracao_decl <node> (48)
        on left: 32
        on right: 26
    retorno_decl <node> (49)
        on left: 33 34
        on right: 27
    expressao <node> (50)
        on left: 35 36
        on right: 28 30 31 32 34 35 38 55 63 64
    var <node> (51)
        on left: 37 38
        on right: 35 56
    simples_expressao <node> (52)
        on left: 39 40
        on right: 36
    relacional <node> (53)
        on left: 41 42 43 44 45 46
        on right: 39
    soma_expressao <node> (54)
        on left: 47 48
        on right: 39 40 47
    soma <node> (55)
        on left: 49 50
        on right: 47
    termo <node> (56)
        on left: 51 52
        on right: 47 48 51
    mult <node> (57)
        on left: 53 54
        on right: 51
    fator <node> (58)
        on left: 55 56 57 58 59
        on right: 51 52 59
    ativacao <node> (59)
        on left: 60
        on right: 57
    args <node> (60)
        on left: 61 62
        on right: 60
    arg_lista <node> (61)
        on left: 63 64
        on right: 61 63


State 0

    0 $accept: • programa $end

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    programa            go to state 3
    declaracao_lista    go to state 4
    declaracao          go to state 5
    var_declaracao      go to state 6
    tipo_especificador  go to state 7
    fun_declaracao      go to state 8


State 1

    8 tipo_especificador: INT •

    $default  reduce using rule 8 (tipo_especificador)


State 2

    9 tipo_especificador: VOID •

    $default  reduce using rule 9 (tipo_especificador)


State 3

    0 $accept: programa • $end

    $end  shift, and go to state 9


State 4

    1 programa: declaracao_lista •
    2 declaracao_lista: declaracao_lista • declaracao

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    $default  reduce using rule 1 (programa)

    declaracao          go to state 10
    var_declaracao      go to state 6
    tipo_especificador  go to state 7
    fun_declaracao      go to state 8


State 5

    3 declaracao_lista: declaracao •

    $default  reduce using rule 3 (declaracao_lista)


State 6

    4 declaracao: var_declaracao •

    $default  reduce using rule 4 (declaracao)


State 7

    6 var_declaracao: tipo_especificador • ID SEMICOL
    7               | tipo_especificador • ID LBRACKET NUM RBRACKET SEMICOL
   10 fun_declaracao: tipo_especificador • ID LPAREN params RPAREN composto_decl

    ID  shift, and go to state 11


State 8

    5 declaracao: fun_declaracao •

    $default  reduce using rule 5 (declaracao)


State 9

    0 $accept: programa $end •

    $default  accept


State 10

    2 declaracao_lista: declaracao_lista declaracao •

    $default  reduce using rule 2 (declaracao_lista)


State 11

    6 var_declaracao: tipo_especificador ID • SEMICOL
    7               | tipo_especificador ID • LBRACKET NUM RBRACKET SEMICOL
   10 fun_declaracao: tipo_especificador ID • LPAREN params RPAREN composto_decl

    SEMICOL   shift, and go to state 12
    LPAREN    shift, and go to state 13
    LBRACKET  shift, and go to state 14


State 12

    6 var_declaracao: tipo_especificador ID SEMICOL •

    $default  reduce using rule 6 (var_declaracao)


State 13

   10 fun_declaracao: tipo_especificador ID LPAREN • params RPAREN composto_decl

    INT   shift, and go to state 1
    VOID  shift, and go to state 15

    tipo_especificador  go to state 16
    params              go to state 17
    param_lista         go to state 18
    param               go to state 19


State 14

    7 var_declaracao: tipo_especificador ID LBRACKET • NUM RBRACKET SEMICOL

    NUM  shift, and go to state 20


State 15

    9 tipo_especificador: VOID •
   12 params: VOID •

    RPAREN    reduce using rule 12 (params)
    $default  reduce using rule 9 (tipo_especificador)


State 16

   15 param: tipo_especificador • ID
   16      | tipo_especificador • ID LBRACKET RBRACKET

    ID  shift, and go to state 21


State 17

   10 fun_declaracao: tipo_especificador ID LPAREN params • RPAREN composto_decl

    RPAREN  shift, and go to state 22


State 18

   11 params: param_lista •
   13 param_lista: param_lista • COMMA param

    COMMA  shift, and go to state 23

    $default  reduce using rule 11 (params)


State 19

   14 param_lista: param •

    $default  reduce using rule 14 (param_lista)


State 20

    7 var_declaracao: tipo_especificador ID LBRACKET NUM • RBRACKET SEMICOL

    RBRACKET  shift, and go to state 24


State 21

   15 param: tipo_especificador ID •
   16      | tipo_especificador ID • LBRACKET RBRACKET

    LBRACKET  shift, and go to state 25

    $default  reduce using rule 15 (param)


State 22

   10 fun_declaracao: tipo_especificador ID LPAREN params RPAREN • composto_decl

    LBRACE  shift, and go to state 26

    composto_decl  go to state 27


State 23

   13 param_lista: param_lista COMMA • param

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    tipo_especificador  go to state 16
    param               go to state 28


State 24

    7 var_declaracao: tipo_especificador ID LBRACKET NUM RBRACKET • SEMICOL

    SEMICOL  shift, and go to state 29


State 25

   16 param: tipo_especificador ID LBRACKET • RBRACKET

    RBRACKET  shift, and go to state 30


State 26

   17 composto_decl: LBRACE • local_declaracoes statement_lista RBRACE

    $default  reduce using rule 19 (local_declaracoes)

    local_declaracoes  go to state 31


State 27

   10 fun_declaracao: tipo_especificador ID LPAREN params RPAREN composto_decl •

    $default  reduce using rule 10 (fun_declaracao)


State 28

   13 param_lista: param_lista COMMA param •

    $default  reduce using rule 13 (param_lista)


State 29

    7 var_declaracao: tipo_especificador ID LBRACKET NUM RBRACKET SEMICOL •

    $default  reduce using rule 7 (var_declaracao)


State 30

   16 param: tipo_especificador ID LBRACKET RBRACKET •

    $default  reduce using rule 16 (param)


State 31

   17 composto_decl: LBRACE local_declaracoes • statement_lista RBRACE
   18 local_declaracoes: local_declaracoes • var_declaracao

    error  shift, and go to state 32
    INT    shift, and go to state 1
    VOID   shift, and go to state 2

    ID       reduce using rule 21 (statement_lista)
    NUM      reduce using rule 21 (statement_lista)
    IF       reduce using rule 21 (statement_lista)
    WHILE    reduce using rule 21 (statement_lista)
    RETURN   reduce using rule 21 (statement_lista)
    MINUS    reduce using rule 21 (statement_lista)
    SEMICOL  reduce using rule 21 (statement_lista)
    LPAREN   reduce using rule 21 (statement_lista)
    LBRACE   reduce using rule 21 (statement_lista)
    RBRACE   reduce using rule 21 (statement_lista)

    var_declaracao      go to state 33
    tipo_especificador  go to state 34
    statement_lista     go to state 35


State 32

   22 statement_lista: error • SEMICOL

    SEMICOL  shift, and go to state 36


State 33

   18 local_declaracoes: local_declaracoes var_declaracao •

    $default  reduce using rule 18 (local_declaracoes)


State 34

    6 var_declaracao: tipo_especificador • ID SEMICOL
    7               | tipo_especificador • ID LBRACKET NUM RBRACKET SEMICOL

    ID  shift, and go to state 37


State 35

   17 composto_decl: LBRACE local_declaracoes statement_lista • RBRACE
   20 statement_lista: statement_lista • statement

    ID       shift, and go to state 38
    NUM      shift, and go to state 39
    IF       shift, and go to state 40
    WHILE    shift, and go to state 41
    RETURN   shift, and go to state 42
    MINUS    shift, and go to state 43
    SEMICOL  shift, and go to state 44
    LPAREN   shift, and go to state 45
    LBRACE   shift, and go to state 26
    RBRACE   shift, and go to state 46

    composto_decl      go to state 47
    statement          go to state 48
    expressao_decl     go to state 49
    selecao_decl       go to state 50
    iteracao_decl      go to state 51
    retorno_decl       go to state 52
    expressao          go to state 53
    var                go to state 54
    simples_expressao  go to state 55
    soma_expressao     go to state 56
    termo              go to state 57
    fator              go to state 58
    ativacao           go to state 59


State 36

   22 statement_lista: error SEMICOL •

    $default  reduce using rule 22 (statement_lista)


State 37

    6 var_declaracao: tipo_especificador ID • SEMICOL
    7               | tipo_especificador ID • LBRACKET NUM RBRACKET SEMICOL

    SEMICOL   shift, and go to state 12
    LBRACKET  shift, and go to state 14


State 38

   37 var: ID •
   38    | ID • LBRACKET expressao RBRACKET
   60 ativacao: ID • LPAREN args RPAREN

    LPAREN    shift, and go to state 60
    LBRACKET  shift, and go to state 61

    $default  reduce using rule 37 (var)


State 39

   58 fator: NUM •

    $default  reduce using rule 58 (fator)


State 40

   30 selecao_decl: IF • LPAREN expressao RPAREN statement
   31             | IF • LPAREN expressao RPAREN statement ELSE statement

    LPAREN  shift, and go to state 62


State 41

   32 iteracao_decl: WHILE • LPAREN expressao RPAREN statement

    LPAREN  shift, and go to state 63


State 42

   33 retorno_decl: RETURN • SEMICOL
   34             | RETURN • expressao SEMICOL

    ID       shift, and go to state 38
    NUM      shift, and go to state 39
    MINUS    shift, and go to state 43
    SEMICOL  shift, and go to state 64
    LPAREN   shift, and go to state 45

    expressao          go to state 65
    var                go to state 54
    simples_expressao  go to state 55
    soma_expressao     go to state 56
    termo              go to state 57
    fator              go to state 58
    ativacao           go to state 59


State 43

   59 fator: MINUS • fator

    ID      shift, and go to state 38
    NUM     shift, and go to state 39
    MINUS   shift, and go to state 43
    LPAREN  shift, and go to state 45

    var       go to state 66
    fator     go to state 67
    ativacao  go to state 59


State 44

   29 expressao_decl: SEMICOL •

    $default  reduce using rule 29 (expressao_decl)


State 45

   55 fator: LPAREN • expressao RPAREN

    ID      shift, and go to state 38
    NUM     shift, and go to state 39
    MINUS   shift, and go to state 43
    LPAREN  shift, and go to state 45

    expressao          go to state 68
    var                go to state 54
    simples_expressao  go to state 55
    soma_expressao     go to state 56
    termo              go to state 57
    fator              go to state 58
    ativacao           go to state 59


State 46

   17 composto_decl: LBRACE local_declaracoes statement_lista RBRACE •

    $default  reduce using rule 17 (composto_decl)


State 47

   24 statement: composto_decl •

    $default  reduce using rule 24 (statement)


State 48

   20 statement_lista: statement_lista statement •

    $default  reduce using rule 20 (statement_lista)


State 49

   23 statement: expressao_decl •

    $default  reduce using rule 23 (statement)


State 50

   25 statement: selecao_decl •

    $default  reduce using rule 25 (statement)


State 51

   26 statement: iteracao_decl •

    $default  reduce using rule 26 (statement)


State 52

   27 statement: retorno_decl •

    $default  reduce using rule 27 (statement)


State 53

   28 expressao_decl: expressao • SEMICOL

    SEMICOL  shift, and go to state 69


State 54

   35 expressao: var • ASSIGN expressao
   56 fator: var •

    ASSIGN  shift, and go to state 70

    $default  reduce using rule 56 (fator)


State 55

   36 expressao: simples_expressao •

    $default  reduce using rule 36 (expressao)


State 56

   39 simples_expressao: soma_expressao • relacional soma_expressao
   40                  | soma_expressao •
   47 soma_expressao: soma_expressao • soma termo

    PLUS     shift, and go to state 71
    MINUS    shift, and go to state 72
    SMAL     shift, and go to state 73
    SMALEQ   shift, and go to state 74
    GREAT    shift, and go to state 75
    GREATEQ  shift, and go to state 76
    EQ       shift, and go to state 77
    DIFF     shift, and go to state 78

    $default  reduce using rule 40 (simples_expressao)

    relacional  go to state 79
    soma        go to state 80


State 57

   48 soma_expressao: termo •
   51 termo: termo • mult fator

    MULT  shift, and go to state 81
    DIV   shift, and go to state 82

    $default  reduce using rule 48 (soma_expressao)

    mult  go to state 83


State 58

   52 termo: fator •

    $default  reduce using rule 52 (termo)


State 59

   57 fator: ativacao •

    $default  reduce using rule 57 (fator)


State 60

   60 ativacao: ID LPAREN • args RPAREN

    ID      shift, and go to state 38
    NUM     shift, and go to state 39
    MINUS   shift, and go to state 43
    LPAREN  shift, and go to state 45

    $default  reduce using rule 62 (args)

    expressao          go to state 84
    var                go to state 54
    simples_expressao  go to state 55
    soma_expressao     go to state 56
    termo              go to state 57
    fator              go to state 58
    ativacao           go to state 59
    args               go to state 85
    arg_lista          go to state 86


State 61

   38 var: ID LBRACKET • expressao RBRACKET

    ID      shift, and go to state 38
    NUM     shift, and go to state 39
    MINUS   shift, and go to state 43
    LPAREN  shift, and go to state 45

    expressao          go to state 87
    var                go to state 54
    simples_expressao  go to state 55
    soma_expressao     go to state 56
    termo              go to state 57
    fator              go to state 58
    ativacao           go to state 59


State 62

   30 selecao_decl: IF LPAREN • expressao RPAREN statement
   31             | IF LPAREN • expressao RPAREN statement ELSE statement

    ID      shift, and go to state 38
    NUM     shift, and go to state 39
    MINUS   shift, and go to state 43
    LPAREN  shift, and go to state 45

    expressao          go to state 88
    var                go to state 54
    simples_expressao  go to state 55
    soma_expressao     go to state 56
    termo              go to state 57
    fator              go to state 58
    ativacao           go to state 59


State 63

   32 iteracao_decl: WHILE LPAREN • expressao RPAREN statement

    ID      shift, and go to state 38
    NUM     shift, and go to state 39
    MINUS   shift, and go to state 43
    LPAREN  shift, and go to state 45

    expressao          go to state 89
    var                go to state 54
    simples_expressao  go to state 55
    soma_expressao     go to state 56
    termo              go to state 57
    fator              go to state 58
    ativacao           go to state 59


State 64

   33 retorno_decl: RETURN SEMICOL •

    $default  reduce using rule 33 (retorno_decl)


State 65

   34 retorno_decl: RETURN expressao • SEMICOL

    SEMICOL  shift, and go to state 90


State 66

   56 fator: var •

    $default  reduce using rule 56 (fator)


State 67

   59 fator: MINUS fator •

    $default  reduce using rule 59 (fator)


State 68

   55 fator: LPAREN expressao • RPAREN

    RPAREN  shift, and go to state 91


State 69

   28 expressao_decl: expressao SEMICOL •

    $default  reduce using rule 28 (expressao_decl)


State 70

   35 expressao: var ASSIGN • expressao

    ID      shift, and go to state 38
    NUM     shift, and go to state 39
    MINUS   shift, and go to state 43
    LPAREN  shift, and go to state 45

    expressao          go to state 92
    var                go to state 54
    simples_expressao  go to state 55
    soma_expressao     go to state 56
    termo              go to state 57
    fator              go to state 58
    ativacao           go to state 59


State 71

   49 soma: PLUS •

    $default  reduce using rule 49 (soma)


State 72

   50 soma: MINUS •

    $default  reduce using rule 50 (soma)


State 73

   41 relacional: SMAL •

    $default  reduce using rule 41 (relacional)


State 74

   42 relacional: SMALEQ •

    $default  reduce using rule 42 (relacional)


State 75

   43 relacional: GREAT •

    $default  reduce using rule 43 (relacional)


State 76

   44 relacional: GREATEQ •

    $default  reduce using rule 44 (relacional)


State 77

   45 relacional: EQ •

    $default  reduce using rule 45 (relacional)


State 78

   46 relacional: DIFF •

    $default  reduce using rule 46 (relacional)


State 79

   39 simples_expressao: soma_expressao relacional • soma_expressao

    ID      shift, and go to state 38
    NUM     shift, and go to state 39
    MINUS   shift, and go to state 43
    LPAREN  shift, and go to state 45

    var             go to state 66
    soma_expressao  go to state 93
    termo           go to state 57
    fator           go to state 58
    ativacao        go to state 59


State 80

   47 soma_expressao: soma_expressao soma • termo

    ID      shift, and go to state 38
    NUM     shift, and go to state 39
    MINUS   shift, and go to state 43
    LPAREN  shift, and go to state 45

    var       go to state 66
    termo     go to state 94
    fator     go to state 58
    ativacao  go to state 59


State 81

   53 mult: MULT •

    $default  reduce using rule 53 (mult)


State 82

   54 mult: DIV •

    $default  reduce using rule 54 (mult)


State 83

   51 termo: termo mult • fator

    ID      shift, and go to state 38
    NUM     shift, and go to state 39
    MINUS   shift, and go to state 43
    LPAREN  shift, and go to state 45

    var       go to state 66
    fator     go to state 95
    ativacao  go to state 59


State 84

   64 arg_lista: expressao •

    $default  reduce using rule 64 (arg_lista)


State 85

   60 ativacao: ID LPAREN args • RPAREN

    RPAREN  shift, and go to state 96


State 86

   61 args: arg_lista •
   63 arg_lista: arg_lista • COMMA expressao

    COMMA  shift, and go to state 97

    $default  reduce using rule 61 (args)


State 87

   38 var: ID LBRACKET expressao • RBRACKET

    RBRACKET  shift, and go to state 98


State 88

   30 selecao_decl: IF LPAREN expressao • RPAREN statement
   31             | IF LPAREN expressao • RPAREN statement ELSE statement

    RPAREN  shift, and go to state 99


State 89

   32 iteracao_decl: WHILE LPAREN expressao • RPAREN statement

    RPAREN  shift, and go to state 100


State 90

   34 retorno_decl: RETURN expressao SEMICOL •

    $default  reduce using rule 34 (retorno_decl)


State 91

   55 fator: LPAREN expressao RPAREN •

    $default  reduce using rule 55 (fator)


State 92

   35 expressao: var ASSIGN expressao •

    $default  reduce using rule 35 (expressao)


State 93

   39 simples_expressao: soma_expressao relacional soma_expressao •
   47 soma_expressao: soma_expressao • soma termo

    PLUS   shift, and go to state 71
    MINUS  shift, and go to state 72

    $default  reduce using rule 39 (simples_expressao)

    soma  go to state 80


State 94

   47 soma_expressao: soma_expressao soma termo •
   51 termo: termo • mult fator

    MULT  shift, and go to state 81
    DIV   shift, and go to state 82

    $default  reduce using rule 47 (soma_expressao)

    mult  go to state 83


State 95

   51 termo: termo mult fator •

    $default  reduce using rule 51 (termo)


State 96

   60 ativacao: ID LPAREN args RPAREN •

    $default  reduce using rule 60 (ativacao)


State 97

   63 arg_lista: arg_lista COMMA • expressao

    ID      shift, and go to state 38
    NUM     shift, and go to state 39
    MINUS   shift, and go to state 43
    LPAREN  shift, and go to state 45

    expressao          go to state 101
    var                go to state 54
    simples_expressao  go to state 55
    soma_expressao     go to state 56
    termo              go to state 57
    fator              go to state 58
    ativacao           go to state 59


State 98

   38 var: ID LBRACKET expressao RBRACKET •

    $default  reduce using rule 38 (var)


State 99

   30 selecao_decl: IF LPAREN expressao RPAREN • statement
   31             | IF LPAREN expressao RPAREN • statement ELSE statement

    ID       shift, and go to state 38
    NUM      shift, and go to state 39
    IF       shift, and go to state 40
    WHILE    shift, and go to state 41
    RETURN   shift, and go to state 42
    MINUS    shift, and go to state 43
    SEMICOL  shift, and go to state 44
    LPAREN   shift, and go to state 45
    LBRACE   shift, and go to state 26

    composto_decl      go to state 47
    statement          go to state 102
    expressao_decl     go to state 49
    selecao_decl       go to state 50
    iteracao_decl      go to state 51
    retorno_decl       go to state 52
    expressao          go to state 53
    var                go to state 54
    simples_expressao  go to state 55
    soma_expressao     go to state 56
    termo              go to state 57
    fator              go to state 58
    ativacao           go to state 59


State 100

   32 iteracao_decl: WHILE LPAREN expressao RPAREN • statement

    ID       shift, and go to state 38
    NUM      shift, and go to state 39
    IF       shift, and go to state 40
    WHILE    shift, and go to state 41
    RETURN   shift, and go to state 42
    MINUS    shift, and go to state 43
    SEMICOL  shift, and go to state 44
    LPAREN   shift, and go to state 45
    LBRACE   shift, and go to state 26

    composto_decl      go to state 47
    statement          go to state 103
    expressao_decl     go to state 49
    selecao_decl       go to state 50
    iteracao_decl      go to state 51
    retorno_decl       go to state 52
    expressao          go to state 53
    var                go to state 54
    simples_expressao  go to state 55
    soma_expressao     go to state 56
    termo              go to state 57
    fator              go to state 58
    ativacao           go to state 59


State 101

   63 arg_lista: arg_lista COMMA expressao •

    $default  reduce using rule 63 (arg_lista)


State 102

   30 selecao_decl: IF LPAREN expressao RPAREN statement •
   31             | IF LPAREN expressao RPAREN statement • ELSE statement

    ELSE  shift, and go to state 104

    $default  reduce using rule 30 (selecao_decl)


State 103

   32 iteracao_decl: WHILE LPAREN expressao RPAREN statement •

    $default  reduce using rule 32 (iteracao_decl)


State 104

   31 selecao_decl: IF LPAREN expressao RPAREN statement ELSE • statement

    ID       shift, and go to state 38
    NUM      shift, and go to state 39
    IF       shift, and go to state 40
    WHILE    shift, and go to state 41
    RETURN   shift, and go to state 42
    MINUS    shift, and go to state 43
    SEMICOL  shift, and go to state 44
    LPAREN   shift, and go to state 45
    LBRACE   shift, and go to state 26

    composto_decl      go to state 47
    statement          go to state 105
    expressao_decl     go to state 49
    selecao_decl       go to state 50
    iteracao_decl      go to state 51
    retorno_decl       go to state 52
    expressao          go to state 53
    var                go to state 54
    simples_expressao  go to state 55
    soma_expressao     go to state 56
    termo              go to state 57
    fator              go to state 58
    ativacao           go to state 59


State 105

   31 selecao_decl: IF LPAREN expressao RPAREN statement ELSE statement •

    $default  reduce using rule 31 (selecao_decl)
